[package]
authors = ["Sjoerd Simons <sjoerd@luon.net>"]
edition = "2021"
name = "ledboard"
version = "0.1.0"

[dependencies]
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-traits = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-tim2"]  }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
rotary-encoder-hal = { version = "0.5.0", features = [ "table-decoder" ] }

[profile.dev]
opt-level = 3
debug = 2

[profile.release]
opt-level = "s"
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
overflow-checks = false
panic="abort"

[patch.crates-io]
rotary-encoder-hal = { git = "https://github.com/leshow/rotary-encoder-hal" }
